--- a/sample_code/python/vessels_v2_graphql/settings.yaml
+++ b/sample_code/python/vessels_v2_graphql/settings.yaml
@@ -1,12 +1,9 @@
-endpoint: 'https://<SOME_URL>'
-token: '<TOKEN>'
+endpoint: 'https://api.staging.maritime.spire.sh/graphql'
+token:  'k6qLvUxATNeqOJw957NhYhfr6iIQCfWX'
 name_of_gql_query_file: 'sample_1.txt'
 name_of_raw_output_file: 'raw.log'   # if set to "" no file will be produced
 name_of_csv_file: 'parsed.csv' # if set to "" no file will be produced
-items_per_page: 100 # number of items returned per page, max is 1000
-pages_to_process: 5  # if 0, then all pages.  Otherwise this is used to limit the pages processed
+items_per_page: 1000 # number of items returned per page, max is 1000
+pages_to_process: 0  # if 0, then all pages.  Otherwise this is used to limit the pages processed
 
-
-#endpoint: 'https://<PRODUCTION_ENDPOINT>'
-#token: '<YOUR TOKEN HERE>'
 
