--- a/sample_code/python/vessels_v2_graphql/settings.yaml
+++ b/sample_code/python/vessels_v2_graphql/settings.yaml
@@ -1,6 +1,7 @@
-endpoint: 'https://api.staging.maritime.spire.sh/graphql'
-token:  'k6qLvUxATNeqOJw957NhYhfr6iIQCfWX'
-name_of_gql_query_file: 'sample_1.txt'
+endpoint: '<PRODUCTION ENDPOINT HERE>'
+token:  '<YOUR TOKEN HERE>'
+name_of_gql_query_file: 'mark_imo_list1.txt'
+#name_of_gql_query_file: 'sample_1.txt'
 name_of_raw_output_file: 'raw.log'   # if set to "" no file will be produced
 name_of_csv_file: 'parsed.csv' # if set to "" no file will be produced
 items_per_page: 1000 # number of items returned per page, max is 1000
