bug fixes and improved logging

--- a/sample_code/python/vessels_v2_graphql/settings.yaml
+++ b/sample_code/python/vessels_v2_graphql/settings.yaml
@@ -1,7 +1,7 @@
 endpoint: 'https://api.spire.com/graphql'
-token: ""
-name_of_gql_query_file: 'sample_1.txt'
-name_of_raw_output_file: 'raw.log'   # if set to "" no file will be produced
+token: "k6qLvUxATNeqOJw957NhYhfr6iIQCfWX"
+name_of_gql_query_file: 'DELETE_ME.txt'
+name_of_raw_output_file: ''   # if set to "" no file will be produced
 name_of_csv_file: 'parsed.csv' # if set to "" no file will be produced
 pages_to_process: 3  # if 0, then all pages.  Otherwise this is used to limit the pages processed
 
