--- a/sample_code/python/vessels_v2_graphql/settings.yaml
+++ b/sample_code/python/vessels_v2_graphql/settings.yaml
@@ -1,8 +1,8 @@
 endpoint: 'https://api.spire.com/graphql'
-token: "k6qLvUxATNeqOJw957NhYhfr6iIQCfWX"
-name_of_gql_query_file: 'DELETE_ME.txt'
+token: ""
+name_of_gql_query_file: 'sample_1.txt'
 name_of_raw_output_file: ''   # if set to "" no file will be produced
 name_of_csv_file: 'parsed.csv' # if set to "" no file will be produced
-pages_to_process: 3  # if 0, then all pages.  Otherwise this is used to limit the pages processed
+pages_to_process: 5  # if 0, then all pages.  Otherwise this is used to limit the pages processed
 
 
